manifests/configs/argo-cd/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argo-cd
  labels:
    app: kubed
    ingressClass: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`argocd.n6.bonkie.net`)
    kind: Rule
    services:
    - name: argo-cd-argocd-server
      port: 443
  tls:
    certResolver: letsencrypt
